miniconf/tests/ui/exact_size_iter.stderr
error[E0080]: evaluation panicked: insufficient depth for exact size iteration
 --> tests/ui/exact_size_iter.rs:3:39
  |
3 | const _: ExactSize<NodeIter<(), 0>> = <[(); 1]>::SCHEMA.nodes();
  |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed inside this call
  |
note: inside `Schema::nodes::<(), 0>`
 --> src/schema.rs
  |
  |         NodeIter::new(self, [0; D], 0, N::DEFAULT_SEED).exact_size()
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `NodeIter::<(), 0>::exact_size`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/iter.rs
  |
  |             panic!("insufficient depth for exact size iteration");
  |             ----------------------------------------------------- in this macro invocation
